app/assets/stylesheets/components/_form.scss
.section-header button {
  outline: none !important;
  border: none !important;

  .btn, .x-btn:focus, .button:focus, [type="submit"]:focus {
    outline: none !important;
    border: none !important;
  }

}

.clickable:hover {
  cursor: pointer;
}

.sticky-header {
  position: sticky;
  top: 0;
  z-index: 1;
  background-color: white;
}

.sticky-column {
  position: fixed;
  height: 100vh;
  overflow-y: scroll;
}

@media only screen and (max-width: 768px) {
  .sticky-column {
    position: relative;
  }

}

.overflow-hidden {

  overflow: hidden;
  position: relative;
}

.slider-left {
  position: absolute;
  left: 0;
  transition: 2s left ease;
}

.slider-right {
  position: absolute;
  left: -100%;
  transition: 2s left ease;
}

.w-40 {
  width: 40%;
}

.w-10 {
  width: 10%;
}

.w-200 {
  width: 200%
}

